fix wrapping in filters

--- a/components/FormsPage/FormsPage.module.scss
+++ b/components/FormsPage/FormsPage.module.scss
@@ -1,11 +1,36 @@
 @import "@/styles/variables";
 
-.input {
+%input-shared {
   width: 100%;
 }
 
+.searchInput {
+  @extend %input-shared;
+}
+
+.statusDropdown {
+  @extend %input-shared;
+}
+
+.dateDropdown {
+  @extend %input-shared;
+}
+
+.filter {
+  flex-grow: 1;
+}
+
 @media (min-width: $breakpoint-mobile) {
-  .input {
-    width: auto;
+  .searchInput {
+    max-width: 250px;
+  }
+
+  .statusDropdown {
+    max-width: 150px;
+    margin-left: 1rem;
+  }
+
+  .dateDropdown {
+    max-width: 150px;
   }
 }
